Train Bawe paragraph encoder

--- a/notebooks/develop/2021-02-08-gc-bawe-par_encoder.ipynb
+++ b/notebooks/develop/2021-02-08-gc-bawe-par_encoder.ipynb
@@ -2,22 +2,84 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "powered-inclusion",
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-2-474600585354>, line 4)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-2-474600585354>\"\u001b[0;36m, line \u001b[0;32m4\u001b[0m\n\u001b[0;31m    bad code\u001b[0m\n\u001b[0m        ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "import torch\n",
     "import pickle\n",
-    "from tqdm import tqdm"
+    "from tqdm import tqdm\n",
+    "bad code"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'flake8' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-3-ce06fc687b96>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mflake8\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'flake8' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "flake8"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-3-6cd893503d8f>, line 3)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-3-6cd893503d8f>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    for a in apples\u001b[0m\n\u001b[0m                   ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "apples = []\n",
+    "\n",
+    "for a in apples\n",
+    "    print(a)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "responsible-speaking",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'torch' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-2-da6f81852ca3>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdev\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdevice\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'cuda'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcuda\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mis_available\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32melse\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdevice\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'cpu'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;31m# dev = torch.device('cpu')\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'torch' is not defined"
+     ]
+    }
+   ],
    "source": [
     "dev = torch.device('cuda') if torch.cuda.is_available() else torch.device('cpu')\n",
     "# dev = torch.device('cpu')"
@@ -26,7 +88,6 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "hydraulic-burst",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +100,6 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "retained-argentina",
    "metadata": {
     "pycharm": {
      "is_executing": true
@@ -59,7 +119,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "radio-external",
    "metadata": {},
    "source": [
     "Validation split"
@@ -68,7 +127,6 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "effective-ecology",
    "metadata": {
     "pycharm": {
      "is_executing": true
@@ -93,7 +151,6 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "cleared-therapist",
    "metadata": {
     "pycharm": {
      "is_executing": true
@@ -119,7 +176,6 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "environmental-submission",
    "metadata": {
     "pycharm": {
      "is_executing": true
@@ -136,7 +192,6 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "perfect-aging",
    "metadata": {
     "pycharm": {
      "is_executing": true
@@ -198,7 +253,6 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "pending-sussex",
    "metadata": {
     "pycharm": {
      "is_executing": true
@@ -241,7 +295,6 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "greenhouse-abuse",
    "metadata": {
     "pycharm": {
      "is_executing": true
@@ -334,7 +387,6 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "handled-lebanon",
    "metadata": {
     "pycharm": {
      "is_executing": true
@@ -355,7 +407,6 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "guilty-reduction",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -380,7 +431,6 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "junior-browser",
    "metadata": {
     "pycharm": {
      "is_executing": true
@@ -408,7 +458,6 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "nasty-symphony",
    "metadata": {
     "pycharm": {
      "is_executing": true
@@ -482,7 +531,6 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "immediate-petersburg",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -494,7 +542,6 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "civic-realtor",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -504,7 +551,6 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "cooperative-buddy",
    "metadata": {
     "pycharm": {
      "is_executing": true
@@ -526,7 +572,6 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "relative-bacteria",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -550,7 +595,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
