Add POSPCA extraction

--- a/notebooks/develop/2021-02-08-gc-bawe-par_encoder.ipynb
+++ b/notebooks/develop/2021-02-08-gc-bawe-par_encoder.ipynb
@@ -2,92 +2,56 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
+   "id": "operational-consensus",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-2-474600585354>, line 4)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-2-474600585354>\"\u001b[0;36m, line \u001b[0;32m4\u001b[0m\n\u001b[0;31m    bad code\u001b[0m\n\u001b[0m        ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import torch\n",
     "import pickle\n",
-    "from tqdm import tqdm\n",
-    "bad code"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'flake8' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-3-ce06fc687b96>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mflake8\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'flake8' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "flake8"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-3-6cd893503d8f>, line 3)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-3-6cd893503d8f>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    for a in apples\u001b[0m\n\u001b[0m                   ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
-   "source": [
-    "apples = []\n",
-    "\n",
-    "for a in apples\n",
-    "    print(a)"
+    "from tqdm import tqdm"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "quick-royalty",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'torch' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-2-da6f81852ca3>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdev\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdevice\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'cuda'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcuda\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mis_available\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32melse\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdevice\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'cpu'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;31m# dev = torch.device('cpu')\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'torch' is not defined"
-     ]
+     "data": {
+      "text/plain": [
+       "tensor([0., 0., 0., 0.])"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "dev = torch.device('cuda') if torch.cuda.is_available() else torch.device('cpu')\n",
-    "# dev = torch.device('cpu')"
+    "torch.zeros(4)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "asian-paint",
+   "metadata": {
+    "pycharm": {
+     "is_executing": true
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# dev = torch.device('cuda') if torch.cuda.is_available() else torch.device('cpu')\n",
+    "dev = torch.device(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "considered-purse",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +63,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
+   "id": "copyrighted-valuable",
    "metadata": {
     "pycharm": {
      "is_executing": true
@@ -119,6 +84,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "gothic-skirt",
    "metadata": {},
    "source": [
     "Validation split"
@@ -126,7 +92,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
+   "id": "standard-plate",
    "metadata": {
     "pycharm": {
      "is_executing": true
@@ -150,7 +117,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
+   "id": "finished-daily",
    "metadata": {
     "pycharm": {
      "is_executing": true
@@ -175,7 +143,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
+   "id": "satellite-distinction",
    "metadata": {
     "pycharm": {
      "is_executing": true
@@ -192,6 +161,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
+   "id": "composed-realtor",
    "metadata": {
     "pycharm": {
      "is_executing": true
@@ -252,7 +222,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
+   "id": "choice-kingdom",
    "metadata": {
     "pycharm": {
      "is_executing": true
@@ -294,7 +265,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 11,
+   "id": "arabic-prague",
    "metadata": {
     "pycharm": {
      "is_executing": true
@@ -386,7 +358,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 12,
+   "id": "alone-grace",
    "metadata": {
     "pycharm": {
      "is_executing": true
@@ -406,7 +379,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
+   "id": "particular-speech",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -430,7 +404,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
+   "id": "skilled-house",
    "metadata": {
     "pycharm": {
      "is_executing": true
@@ -457,7 +432,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
+   "id": "affecting-remedy",
    "metadata": {
     "pycharm": {
      "is_executing": true
@@ -469,26 +445,27 @@
     "\n",
     "torch.seed()\n",
     "\n",
+    "\n",
     "def fit(validate=True):\n",
     "    for epoch in range(epochs):\n",
     "        for index, (x1b, y1b, x2b, y2b) in tqdm(enumerate(train_dl), total=len(train_dl)):\n",
     "            x1_encoding = style_encoder(x1b)\n",
     "            x2_encoding = style_encoder(x2b)\n",
-    "            \n",
+    "\n",
     "            pred = style_discriminator(x1_encoding, x2_encoding).squeeze(1)\n",
-    "            \n",
+    "\n",
     "            yb = y_difference(y1b, y2b).to(dtype=torch.float)\n",
-    "            \n",
+    "\n",
     "            loss = criterion(pred, yb)\n",
-    "            \n",
+    "\n",
     "            loss.backward()\n",
     "\n",
     "            opt.step()\n",
     "            opt.zero_grad()\n",
-    "            \n",
+    "\n",
     "            writer.add_scalar('Training Loss', loss, index)\n",
     "            writer.flush()\n",
-    "            \n",
+    "\n",
     "            if index % 100 == 0:\n",
     "                valid_loss = evaluate(valid_dl)\n",
     "                writer.add_scalar('Validation Loss', valid_loss, index)\n",
@@ -502,46 +479,54 @@
     "            valid_loss = evaluate(valid_dl)\n",
     "            writer.add_scalar('Validation Loss', valid_loss, epoch)\n",
     "#             writer.add_scalar('Validation Accuracy', valid_accuracy, epoch)\n",
-    "        \n",
+    "\n",
     "        writer.flush()\n",
+    "\n",
     "\n",
     "def y_difference(y1, y2):\n",
     "    return torch.logical_not((y1 == y2)).to(dtype=int).to(dev)\n",
-    "        \n",
+    "\n",
+    "\n",
     "def evaluate(dl, give_acc=False):\n",
     "    with torch.no_grad():\n",
-    "        preds_y = [(style_discriminator(style_encoder(x1b), style_encoder(x2b)), y_difference(y1b, y2b)) for x1b, y1b, x2b, y2b in dl]\n",
+    "        preds_y = [(style_discriminator(style_encoder(x1b),\n",
+    "                                        style_encoder(x2b)),\n",
+    "                    y_difference(y1b, y2b))\n",
+    "                   for x1b, y1b, x2b, y2b in dl]\n",
     "\n",
     "        losses = [criterion(preds_b.squeeze(1), yb) for preds_b, yb in preds_y]\n",
     "        loss = sum(losses) / len(losses)\n",
     "\n",
-    "#         if give_acc:\n",
-    "#             accs = [accuracy(preds_b, yb) for preds_b, yb in preds_y]\n",
-    "#             acc = sum(accs) / len(accs)\n",
-    "            \n",
-    "#             return loss, acc\n",
-    "        \n",
+    "        if give_acc:\n",
+    "            accs = [accuracy(preds_b, yb) for preds_b, yb in preds_y]\n",
+    "            acc = sum(accs) / len(accs)\n",
+    "\n",
+    "            return loss, acc\n",
+    "\n",
     "        return loss\n",
     "\n",
-    "# def accuracy(out, y):\n",
-    "#     preds = ((preds > 0.5)).to()\n",
-    "#     return (preds == y).float().mean()"
+    "\n",
+    "def accuracy(out, y):\n",
+    "    preds = out > 0.5\n",
+    "    return (preds == y).float().mean()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
+   "id": "olympic-checklist",
    "metadata": {},
    "outputs": [],
    "source": [
-    "torch.save(embedding.state_dict(), '../resources/bawe_embedding_sd.pt')\n",
-    "torch.save(style_encoder.state_dict(), '../resources/bawe_style_encoder_sd.pt')\n",
-    "torch.save(style_discriminator.state_dict(), '../resources/bawe_style_discriminator_sd.pt')"
+    "# torch.save(embedding.state_dict(), '../resources/bawe_embedding_sd.pt')\n",
+    "# torch.save(style_encoder.state_dict(), '../resources/bawe_style_encoder_sd.pt')\n",
+    "# torch.save(style_discriminator.state_dict(), '../resources/bawe_style_discriminator_sd.pt')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
+   "id": "bibliographic-hybrid",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -550,28 +535,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
+   "id": "collect-electron",
    "metadata": {
     "pycharm": {
      "is_executing": true
     }
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 91%|█████████ | 900/992 [04:18<00:26,  3.49it/s]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "fit()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
+   "id": "welsh-elephant",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -581,21 +560,15 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [conda env:avpd]",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-avpd-xpython"
   },
   "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.7.9"
   }
  },
  "nbformat": 4,
