--- a/notebooks/deliver/bawe_rnn_train.ipynb
+++ b/notebooks/deliver/bawe_rnn_train.ipynb
@@ -3,90 +3,157 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "described-electricity",
+   "id": "satisfied-signature",
    "metadata": {},
    "outputs": [],
    "source": [
     "from datetime import datetime\n",
     "import os\n",
     "from os.path import join\n",
+    "import pandas as pd\n",
     "from pathlib import Path\n",
     "import pickle\n",
+    "import spacy\n",
     "import sys\n",
     "import torch\n",
     "from torch import optim\n",
-    "from torch.nn import Embedding\n",
+    "from torch.nn import Embedding, LSTM\n",
     "from torch.nn.functional import mse_loss\n",
     "from torch.utils.data import TensorDataset\n",
     "from torch.utils.tensorboard import SummaryWriter\n",
     "from tqdm import tqdm\n",
     "\n",
-    "sys.path.append(os.path.abspath(Path('..')))\n",
+    "project_root = Path('..')\n",
+    "sys.path.append(os.path.abspath(project_root))\n",
+    "from notebooks.utils import init_data_dir  # noqa\n",
     "\n",
-    "from notebooks.datatools import EqualOpDataLoader, Preprocessor  # noqa\n",
-    "from notebooks.nets import EuclideanDiscriminator, PackedEmbedder, ParEncoder, SentenceEncoder, StyleEncoder  # noqa"
+    "from notebooks import pipes  # noqa\n",
+    "from notebooks.datatools import AuthorDataset, EqualOpDataLoader  # noqa\n",
+    "from notebooks.nets import EuclideanDiscriminator, PackedEmbedder, StyleEncoder, Seq2Vec  # noqa\n",
+    "from notebooks.utils import POSVocab  # noqa\n",
+    "\n",
+    "init_data_dir(project_root)\n",
+    "\n",
+    "preprocess_path = join(project_root, Path('data/preprocess'))\n",
+    "\n",
+    "dev = torch.device(0)\n",
+    "nlp = spacy.load('en_core_web_sm')\n",
+    "pos_vocab = POSVocab()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "major-mediterranean",
+   "id": "persistent-merchandise",
    "metadata": {},
    "outputs": [],
    "source": [
-    "writer_dir = Path('../runs')\n",
+    "writer_dir = join(project_root, 'runs')\n",
     "\n",
-    "dev = torch.device(0)\n",
     "writer = SummaryWriter(join(writer_dir, f'{datetime.now()}-bawe-par-encoder'))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "major-mother",
+   "id": "higher-component",
    "metadata": {},
    "outputs": [],
    "source": [
-    "preprocessed_data_dir = Path('../data/preprocess')\n",
-    "resources_dir = Path('../resources')\n",
+    "reprocess = False\n",
     "\n",
-    "train_data = torch.load(join(preprocessed_data_dir, 'bawe_train_data.pt'))\n",
-    "train_sentence_lengths = torch.load(join(preprocessed_data_dir,\n",
-    "                                         'bawe_train_sentence_lengths.pt'))\n",
-    "train_labels = torch.load(join(preprocessed_data_dir, 'bawe_train_labels.pt'))\n",
+    "train_data_path = join(preprocess_path, 'bawe_train_sentences_tokenized.hdf5')\n",
+    "valid_data_path = join(preprocess_path, 'bawe_valid_sentences_tokenized.hdf5')\n",
     "\n",
-    "valid_data = torch.load(join(preprocessed_data_dir, 'bawe_valid_data.pt'))\n",
-    "valid_sentence_lengths = torch.load(join(preprocessed_data_dir,\n",
-    "                                         'bawe_valid_sentence_lengths.pt'))\n",
-    "valid_labels = torch.load(join(preprocessed_data_dir, 'bawe_valid_labels.pt'))\n",
+    "train_data_exists = os.path.exists(train_data_path)\n",
+    "valid_data_exists = os.path.exists(valid_data_path)\n",
     "\n",
-    "with open(join(resources_dir, 'pos_vocab.p'), 'rb') as f:\n",
-    "    pos_vocab = pickle.load(f)\n",
+    "pipeline = pipes.POSTokenize(nlp=nlp, pos_vocab=pos_vocab, show_loading=True)\n",
     "\n",
-    "train_set = TensorDataset(train_data, train_sentence_lengths, train_labels)\n",
-    "valid_set = TensorDataset(valid_data, valid_sentence_lengths, valid_labels)"
+    "if not (train_data_exists and valid_data_exists) or reprocess:\n",
+    "    print('Processing...', flush=True)\n",
+    "\n",
+    "    train_df = pd.read_hdf(join(preprocess_path, 'bawe_train_sentences.hdf5'))\n",
+    "    valid_df = pd.read_hdf(join(preprocess_path, 'bawe_valid_sentences.hdf5'))\n",
+    "\n",
+    "    train_data = pipeline(train_df)\n",
+    "    valid_data = pipeline(valid_df)\n",
+    "\n",
+    "    train_data.to_hdf(train_data_path, 'bawe_train_sentences_tokenized')\n",
+    "    valid_data.to_hdf(valid_data_path, 'bawe_valid_sentences_tokenized')\n",
+    "else:\n",
+    "    train_data = pd.read_hdf(train_data_path)\n",
+    "    valid_data = pd.read_hdf(valid_data_path)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "waiting-queensland",
+   "id": "organizational-clinic",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "sentence           [8, 2, 10, 3, 8, 10, 5, 12, 18, 8, 10, 3, 15, ...\n",
+       "sentence_length                                                   71\n",
+       "Name: (28, 0, 1), dtype: object"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "embedder = PackedEmbedder(Embedding(len(pos_vocab), 100,\n",
-    "                                    padding_idx=pos_vocab['<pad>']))\n",
-    "sentence_encoder = SentenceEncoder(100, 100)\n",
-    "par_encoder = ParEncoder(100, 100)\n",
-    "\n",
-    "style_encoder = StyleEncoder(embedder, sentence_encoder, par_encoder).to(dev)\n",
-    "style_discriminator = EuclideanDiscriminator().to(dev)"
+    "train_data.loc[(28, 0, 1)]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "changed-editor",
+   "id": "unable-bathroom",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "num_sentences = 20"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "nominated-january",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pipeline = pipes.GroupSentences(n=num_sentences)\n",
+    "\n",
+    "train_data = pipeline(train_data)\n",
+    "valid_data = pipeline(valid_data)\n",
+    "\n",
+    "train_set = AuthorDataset(train_data)\n",
+    "valid_set = AuthorDataset(valid_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "invisible-petersburg",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "embedder = PackedEmbedder(Embedding(len(pos_vocab), 10,\n",
+    "                                    padding_idx=pos_vocab['<pad>']))\n",
+    "sentence_encoder = Seq2Vec(LSTM(10, 5))\n",
+    "\n",
+    "style_encoder = StyleEncoder(embedder, sentence_encoder).to(dev)\n",
+    "style_discriminator = EuclideanDiscriminator(n=num_sentences).to(dev)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "statewide-chrome",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,9 +167,9 @@
     "criterion = mse_loss\n",
     "bs = 75\n",
     "\n",
-    "preprocessor = Preprocessor(dev)\n",
-    "train_dl = EqualOpDataLoader(train_set, bs=bs, collate_fn=preprocessor)\n",
-    "valid_dl = EqualOpDataLoader(valid_set, bs=bs, collate_fn=preprocessor)\n",
+    "pipeline = pipes.PackSequence(dev=dev)\n",
+    "train_dl = EqualOpDataLoader(train_set, bs=bs, pipeline=pipeline)\n",
+    "valid_dl = EqualOpDataLoader(valid_set, bs=bs, pipeline=pipeline)\n",
     "\n",
     "\n",
     "def fit(validate=True, validate_every=100):\n",
@@ -164,30 +231,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "prostate-bacteria",
+   "execution_count": 9,
+   "id": "driving-packing",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|##########| 1000/1000 [05:06<00:00,  3.27it/s]\n"
+      " 24%|##4       | 241/1000 [04:11<13:12,  1.04s/it]\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m\n\u001B[0;31mKeyboardInterrupt\u001B[0m                         Traceback (most recent call last)",
+      "File \u001B[0;34m/home/gchristensen/anaconda3/envs/avpd/lib/python3.7/site-packages/IPython/core/interactiveshell.py\u001B[0m, in \u001B[0;32mrun_code\u001B[0m:\nLine \u001B[0;34m3427\u001B[0m:  exec(code_obj, \u001B[36mself\u001B[39;49;00m.user_global_ns, \u001B[36mself\u001B[39;49;00m.user_ns)\n",
+      "In  \u001B[0;34m[9]\u001B[0m:\nLine \u001B[0;34m1\u001B[0m:     fit(validate=\u001B[34mFalse\u001B[39;49;00m)\n",
+      "In  \u001B[0;34m[8]\u001B[0m:\nLine \u001B[0;34m19\u001B[0m:    total=\u001B[36mlen\u001B[39;49;00m(train_dl)):\n",
+      "File \u001B[0;34m/home/gchristensen/anaconda3/envs/avpd/lib/python3.7/site-packages/tqdm/std.py\u001B[0m, in \u001B[0;32m__iter__\u001B[0m:\nLine \u001B[0;34m1170\u001B[0m:  \u001B[34mfor\u001B[39;49;00m obj \u001B[35min\u001B[39;49;00m iterable:\n",
+      "File \u001B[0;34m/home/gchristensen/base/repos/avpd/notebooks/notebooks/datatools/_equal_op_dataloader.py\u001B[0m, in \u001B[0;32m__iter__\u001B[0m:\nLine \u001B[0;34m45\u001B[0m:    first_df = \u001B[36mself\u001B[39;49;00m.dataset.sample_authors(first_labels.tolist())\n",
+      "File \u001B[0;34m/home/gchristensen/base/repos/avpd/notebooks/notebooks/datatools/_author_dataset.py\u001B[0m, in \u001B[0;32msample_authors\u001B[0m:\nLine \u001B[0;34m31\u001B[0m:    groups = \u001B[36mself\u001B[39;49;00m.df[\u001B[36mself\u001B[39;49;00m.df.index.droplevel([\u001B[33m'\u001B[39;49;00m\u001B[33mgroup_position\u001B[39;49;00m\u001B[33m'\u001B[39;49;00m, \u001B[33m'\u001B[39;49;00m\u001B[33msentence_position\u001B[39;49;00m\u001B[33m'\u001B[39;49;00m]).isin(\u001B[36mzip\u001B[39;49;00m(authors, text_ids))]\n",
+      "File \u001B[0;34m/home/gchristensen/anaconda3/envs/avpd/lib/python3.7/site-packages/pandas/core/indexes/multi.py\u001B[0m, in \u001B[0;32misin\u001B[0m:\nLine \u001B[0;34m3849\u001B[0m:  \u001B[34mreturn\u001B[39;49;00m algos.isin(\u001B[36mself\u001B[39;49;00m._values, values)\n",
+      "File \u001B[0;34m/home/gchristensen/anaconda3/envs/avpd/lib/python3.7/site-packages/pandas/core/algorithms.py\u001B[0m, in \u001B[0;32misin\u001B[0m:\nLine \u001B[0;34m493\u001B[0m:   \u001B[34mreturn\u001B[39;49;00m f(comps, values)\n",
+      "\u001B[0;31mKeyboardInterrupt\u001B[0m: \n\u001B[0;31m---------------------------------------------------------------------------\u001B[0m"
      ]
     }
    ],
    "source": [
-    "fit()"
+    "fit(validate=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "solar-tourist",
+   "execution_count": null,
+   "id": "plastic-fighter",
    "metadata": {},
    "outputs": [],
    "source": [
-    "outputs_dir = Path('../outputs')\n",
+    "outputs_dir = join(project_root, 'outputs')\n",
     "if not os.path.isdir(outputs_dir):\n",
     "    os.mkdir(outputs_dir)\n",
     "\n",
@@ -199,8 +283,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "seeing-joining",
+   "execution_count": null,
+   "id": "ranging-architect",
    "metadata": {},
    "outputs": [],
    "source": [
